# First_approach_to_computer_vision

./: .gitignore  CMakeLists.txt  README.md
build_GPU_openCV/: .How_to_build.txt  Builder.bat
src/: chapter1.cpp  chapter2.cpp  chapter3.cpp  chapter4.cpp  chapter5.cpp  chapter6.cpp
